--- a/index.html
+++ b/index.html
@@ -375,19 +375,19 @@
         });
 // ====== User Profile Data Section - Please modify the content below ======
         const profileData = {
-            name: "Professor 欒斌",
-            title1: "全球前 2% 頂尖科學家",
-            title2: "2024 全國師鐸獎得主",
-            expertise: "電子商務、網路行銷、AI應用",
-            education: "美國威斯康辛大學麥迪遜校區工業工程博士",
-            email: "luarn@mail.ntust.edu.tw",
-            linkedin: "https://pse.is/8nn88y",
-            about1: "欒斌教授於東海大學取得工業工程學士學位，<br>",
-            about2: "隨後於美國威斯康辛大學麥迪遜分校取得工業工程碩士及博士學位。<br>",
-            about3: "2020~2025連續6年，獲得史丹佛大學評選為全球前2%頂尖科學家。<br>",
-            about4: "2024 榮獲總統頒發全國師鐸獎", 
-            phone: "886-2-2737-6754",
-            location: "Office: 台北市基隆路四段43號 台灣科技大學 T2-409"
+            name: "鄭伊珊 Elaine 伊戀",
+            title1: "企管系學會 副會長",
+            title2: "竹友會 公關 二家家媽",
+            expertise: "活動企劃、英語能力",
+            education: "國立台灣科技大學 企業管理系 三年級",
+            email: "yishan9314@gmail.com",
+            linkedin: "https://www.instagram.com/y.s_9213/",
+            about1: "來自新竹 風很大的城市<br>",
+            about2: "上大學後愛上夜衝 夜唱<br>",
+            about3: "原本是I人 現在變E人<br>",
+            about4: "英國愛好者", 
+            phone: "",
+            location: "新竹縣芎林鄉"
         };
     </script>
 </body>
